Start refactoring 0.2